# neonote

./: .gitignore  CHANGELOG.md  Readme.md  SetupHooks.hs  build-exe.sh  cabal.project  neonote.cabal  nn.sh  update_binary.sh
app/: Main.hs
matcher/: Cargo.toml
matcher/src/: lib.rs
recordings/: showcase.json  showcase_0.3.0.0.json
recordings/some_notes/: file1.md  file2.md  file3.md
src/Data/Functor/: Empty.hs
src/Data/List/: SafeIndex.hs
src/NeoNote/: Actions.hs  CLI.hs  Cache.hs  Configuration.hs  Error.hs  Log.hs  Run.hs  Search.hs  Time.hs  UI.hs
src/NeoNote/CLI/: DisplayNote.hs  DisplayNotes.hs  Editor.hs  ParseArguments.hs  Picker.hs  Prompt.hs
src/NeoNote/Data/: Id.hs  Note.hs
src/NeoNote/Note/: Highlight.hs  Note.hs  Parse.hs
src/NeoNote/Note/Syntax/: Common.hs  NoteFilter.hs  RawNote.hs
src/NeoNote/Store/: Database.hs  Files.hs  Note.hs
src/NeoNote/Store/Database/: Error.hs
src/NeoNote/UI/: DisplayNote.hs  DisplayNotes.hs  Editor.hs  ParseArguments.hs  Picker.hs  Prompt.hs  Search.hs
test/: FakeEnvironment.hs  Main.hs
