cabal-version:      3.0
name:               neonote
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Simre1
maintainer:         simre4775@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: -Wall -threaded
    default-language: GHC2021
    default-extensions:
        OverloadedLabels
        OverloadedStrings
        TypeFamilies
        LambdaCase
        DuplicateRecordFields
        NoFieldSelectors
        DataKinds
        TemplateHaskell
        QuasiQuotes

library
    import:           common
    exposed-modules:  
        Data.List.SafeIndex
        Data.Functor.Empty

        NeoNote.Search
        NeoNote.Note.Note
        NeoNote.Note.Parse
        NeoNote.Data.Id
        NeoNote.Store.Database
        NeoNote.Store.Database.Error
        NeoNote.Store.Files
        NeoNote.Store.Note
        NeoNote.Run
        NeoNote.Configuration
        NeoNote.Actions
        NeoNote.UI.ParseArguments
        NeoNote.UI.Editor
        NeoNote.UI.Picker
        NeoNote.UI.Prompt
        NeoNote.UI.DisplayNotes
        NeoNote.UI.DisplayNote
        NeoNote.UI
        NeoNote.Time
        NeoNote.Log
        NeoNote.Error
        Paths_neonote    
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.17.0.0,
        optics-core,
        optics-extra,
        containers,
        vector,
        bytestring,
        text,
        time,
        random,
        sqlite-simple,
        directory,
        filepath,
        effectful,
        effectful-th,
        string-interpolate,
        optparse-applicative,
        typed-process,
        fuzzy,
        brick,
        vty,
        regex-tdfa,
        megaparsec,
        table-layout,
        data-default,
        config-ini,
        transformers
        
    hs-source-dirs:   src

executable neonote
    import:           common
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        neonote

    hs-source-dirs:   app

test-suite neonote-test
    import:           common
    other-modules: 
        FakeEnvironment
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        containers,
        effectful,
        optics-core,
        text,
        neonote,
        filepath,
        directory,
        random,
        tasty,
        tasty-hunit
