cabal-version:      3.12
name:               neonote
version:            0.2.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Simre1
maintainer:         simre4775@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

custom-setup
  setup-depends:
    base        >= 4.18 && < 5,
    Cabal-hooks >= 3.14 && < 3.15,
    Cabal-syntax,
    process

common common
    ghc-options: -Wall -threaded
    default-language: GHC2024
    default-extensions:
        OverloadedLabels
        OverloadedStrings
        OverloadedRecordDot
        TypeFamilies
        DuplicateRecordFields
        NoFieldSelectors
        DataKinds
        TemplateHaskell
        QuasiQuotes
    build-depends:
        base ^>=4.17.0.0,
        optics-core,
        optics-extra,
        containers,
        vector,
        bytestring,
        text,
        time,
        directory,
        filepath,
        effectful,
        effectful-th,
        transformers,
        random
library
    import:           common
    exposed-modules:  
        Data.List.SafeIndex
        Data.Functor.Empty

        NeoNote.Run
        NeoNote.Search
        NeoNote.Note.Highlight
        NeoNote.Note.Note
        NeoNote.Note.Parse
        NeoNote.Data.Id
        NeoNote.Store.Database
        NeoNote.Store.Database.Error
        NeoNote.Store.Files
        NeoNote.Store.Note
        NeoNote.Cache
        NeoNote.Configuration
        NeoNote.Actions
        NeoNote.CLI.ParseArguments
        NeoNote.CLI.Editor
        NeoNote.CLI.Picker
        NeoNote.CLI.Prompt
        NeoNote.CLI.DisplayNotes
        NeoNote.CLI.DisplayNote
        NeoNote.CLI
        NeoNote.Time
        NeoNote.Log
        NeoNote.Error
        Paths_neonote
        
    build-depends:    
        sqlite-simple,
        string-interpolate >= 0.3.4,
        optparse-applicative,
        typed-process,
        fuzzy,
        brick,
        vty,
        regex-tdfa,
        megaparsec,
        table-layout,
        data-default,
        config-ini,
        skylighting,
        pretty-terminal,
        hashable
        
    hs-source-dirs:   src
    -- extra-libraries: matcher
    -- includes: matcher/matcher.h

executable neonote
    import:           common
    main-is:          Main.hs

    -- other-modules:
    -- other-extensions:
    build-depends:
        neonote

    hs-source-dirs:   app

executable server
    import:           common
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        neonote

    hs-source-dirs:   app

test-suite neonote-test
    import:           common
    other-modules: 
        FakeEnvironment
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        neonote,
        tasty,
        tasty-hunit
